--- a/PractTest/.project
+++ b/PractTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Practical 01&amp;02</name>
+	<name>PractTest</name>
 	<comment></comment>
 	<projects>
 	</projects>
