--- a/Practical 07/.project
+++ b/Practical 07/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Practical 01&amp;02</name>
+	<name>Practical 07</name>
 	<comment></comment>
 	<projects>
 	</projects>
